--- a/set/kustomization.yaml
+++ b/set/kustomization.yaml
@@ -57,7 +57,7 @@ resources:
 
 # Kubeflow Pipelines
 - ../apps/pipeline/upstream/env/cert-manager/platform-agnostic-multi-user
-# - ../apps/pipeline/upstream/env/platform-agnostic-multi-user-emissary  | kubectl apply -f -
+# - ../apps/pipeline/upstream/env/platform-agnostic-multi-user-emissary
 # Katib
 - ../apps/katib/upstream/installs/katib-with-kubeflow
 # Central Dashboard
@@ -84,3 +84,5 @@ resources:
 # KServe
 - ../contrib/kserve/kserve
 - ../contrib/kserve/models-web-app/overlays/kubeflow
+
+ 
