--- a/apps/katib/upstream/components/mysql/pvc.yaml
+++ b/apps/katib/upstream/components/mysql/pvc.yaml
@@ -1,12 +1,62 @@
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: katib-mysql-pv
+# spec:
+#   capacity:
+#     storage: 10Gi
+#   accessModes:
+#     - ReadWriteOnce
+#   persistentVolumeReclaimPolicy: Retain
+#   nfs:
+#     path: /home/davit/kubeflow-katib-mysql-pv
+#     server: 127.0.0.1
+#   storageClassName: nfs-client
+
+# ---
+
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: katib-mysql
+#   namespace: kubeflow
+# spec:
+#   storageClassName: nfs-client
+#   volumeName: katib-mysql-pv
+#   accessModes:
+#     - ReadWriteOnce
+#   resources:
+#     requests:
+#       storage: 10Gi
+
+
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: katib-mysql-pv
+spec:
+  storageClassName: manual
+  capacity:
+    storage: 2Gi
+  accessModes:
+    - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  hostPath:
+    path: /home/davit/kubeflow-katib-mysql-pv
+
+
 ---
+
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: katib-mysql
   namespace: kubeflow
 spec:
+  storageClassName: manual
+  volumeName: katib-mysql-pv
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 10Gi
+      storage: 2Gi
