--- a/common/oidc-authservice/base/pvc.yaml
+++ b/common/oidc-authservice/base/pvc.yaml
@@ -1,10 +1,59 @@
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: authservice-pv
+# spec:
+#   capacity:
+#     storage: 10Gi
+#   accessModes:
+#     - ReadWriteOnce
+#   persistentVolumeReclaimPolicy: Retain
+#   nfs:
+#     path: /home/davit/kubeflow-authservice-mysql-pv
+#     server: 127.0.0.1
+#   storageClassName: nfs-client
+
+# ---
+
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: authservice-pvc
+# spec:
+#   storageClassName: nfs-client
+#   volumeName: authservice-pv
+#   accessModes:
+#     - ReadWriteOnce
+#   resources:
+#     requests:
+#       storage: 10Gi
+
+
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: authservice-pv
+spec:
+  storageClassName: manual
+  capacity:
+    storage: 2Gi
+  accessModes:
+    - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  hostPath:
+    path: /home/davit/kubeflow-authservice-mysql-pv
+
+
+---
+
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: authservice-pvc
 spec:
-  accessModes:
-    - ReadWriteOnce
+  storageClassName: manual
+  volumeName: authservice-pv
+  accessModes: [ReadWriteOnce]
   resources:
     requests:
-      storage: 10Gi
+      storage: 2Gi
