add node affility to pvcs

--- a/apps/katib/upstream/components/mysql/pvc.yaml
+++ b/apps/katib/upstream/components/mysql/pvc.yaml
@@ -60,3 +60,11 @@ spec:
   resources:
     requests:
       storage: 2Gi
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+          - gpu1
