--- a/apps/katib/upstream/components/mysql/pvc.yaml
+++ b/apps/katib/upstream/components/mysql/pvc.yaml
@@ -1,10 +1,28 @@
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: katib-mysql-pv
+spec:
+  capacity:
+    storage: 10Gi
+  accessModes:
+    - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  nfs:
+    path: /data/data-science-persistent-volumes/kubeflow/kubeflow-katib-mysql-pv
+    server: 10.10.10.10
+  storageClassName: nfs-client
+
 ---
+
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: katib-mysql
   namespace: kubeflow
 spec:
+  storageClassName: nfs-client
+  volumeName: katib-mysql-pv
   accessModes:
     - ReadWriteOnce
   resources:
