--- a/set/kustomization.yaml
+++ b/set/kustomization.yaml
@@ -36,28 +36,28 @@ resources:
 - ../common/cert-manager/cert-manager/base
 - ../common/cert-manager/kubeflow-issuer/base
 # Istio
-- ../common/istio-1-17/istio-crds/base
-- ../common/istio-1-17/istio-namespace/base
-- ../common/istio-1-17/istio-install/base
+- ../common/istio-1-16/istio-crds/base
+- ../common/istio-1-16/istio-namespace/base
+- ../common/istio-1-16/istio-install/base
 # OIDC Authservice
-- ../common/oidc-client/oidc-authservice/base
+- ../common/oidc-authservice/base
 # Dex
 - ../common/dex/overlays/istio
 # KNative
 - ../common/knative/knative-serving/overlays/gateways
 - ../common/knative/knative-eventing/base
-- ../common/istio-1-17/cluster-local-gateway/base
+- ../common/istio-1-16/cluster-local-gateway/base
 # Kubeflow namespace
 - ../common/kubeflow-namespace/base
 # Kubeflow Roles
 - ../common/kubeflow-roles/base
 # Kubeflow Istio Resources
-- ../common/istio-1-17/kubeflow-istio-resources/base
+- ../common/istio-1-16/kubeflow-istio-resources/base
 
 
 # Kubeflow Pipelines
 - ../apps/pipeline/upstream/env/cert-manager/platform-agnostic-multi-user
-# - ../apps/pipeline/upstream/env/platform-agnostic-multi-user-emissary  | kubectl apply -f -
+# - ../apps/pipeline/upstream/env/platform-agnostic-multi-user-emissary
 # Katib
 - ../apps/katib/upstream/installs/katib-with-kubeflow
 # Central Dashboard
@@ -84,3 +84,5 @@ resources:
 # KServe
 - ../contrib/kserve/kserve
 - ../contrib/kserve/models-web-app/overlays/kubeflow
+
+ 
