--- a/apps/kfp-tekton/upstream/v1/base/metadata/overlays/db/metadata-db-pvc.yaml
+++ b/apps/kfp-tekton/upstream/v1/base/metadata/overlays/db/metadata-db-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: authservice-pv
+  name: metadata-mysql-pv
 spec:
   capacity:
     storage: 10Gi
@@ -21,7 +21,7 @@ metadata:
   name: metadata-mysql
 spec:
   storageClassName: nfs-client
-  volumeName: authservice-pv
+  volumeName: metadata-mysql-pv
   accessModes: [ReadWriteOnce]
   resources:
     requests:
