--- a/common/oidc-client/oidc-authservice/base/pvc.yaml
+++ b/common/oidc-client/oidc-authservice/base/pvc.yaml
@@ -19,6 +19,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: authservice-pvc
+  namespace: istio-system
 spec:
   storageClassName: nfs-client
   volumeName: authservice-pv
